infra/k8s/green-chromeL-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-chromel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-chromel
  template:
    metadata:
      labels:
        app: green-chromel
    spec:
      containers:
        - name: chromel
          image: us-central1-docker.pkg.dev/lcc-backend/lcc-backend/chrome-l:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "30m"
          ports:
            - containerPort: 9100
          # NEVER for minikube and always for cloud
          imagePullPolicy: Always
