infra/k8s/goServer.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
spec:
  type: NodePort
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9100
      nodePort: 31000
