infra/k8s/lcc-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcc-backend-service
spec:
  type: NodePort
  selector:
    app: lcc-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9100
      nodePort: 31001
