infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: leetcode-or-explode.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: lcc-backend-service
                port:
                  number: 80
